--- a/samba-pdbsql/source/Makefile.in
+++ b/samba-pdbsql/source/Makefile.in
@@ -32,7 +32,7 @@ clean:
 
 install:
 	$(INSTALL) -d $(LIBDIR)/passdb
-	$(INSTALL) -m 0755 $(addsuffix .$(SHLIBEXT), $(modules)) $(LIBDIR)/passdb
+	$(INSTALL) -m 0755 $(addsuffix .$(SHLIBEXT), $(modules)) $(LIBDIR)/pdb
 
 distclean:
 	rm -rf autom4te.cache config.cache config.status
