getting forward, but still crashes (for me)   -> maybe do some testing in another environment
the module gets registered and the first queries run but smbd crashes very
soon after the start. however, i think think smbd should not do so here
since control has left the module.


git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@20 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/source/Makefile.in
+++ b/samba-pdbsql/source/Makefile.in
@@ -31,7 +31,7 @@ clean:
 	rm -f *.o *.$(SHLIBEXT)
 
 install:
-	$(INSTALL) -d $(LIBDIR)/passdb
+	$(INSTALL) -d $(LIBDIR)/pdb
 	$(INSTALL) -m 0755 $(addsuffix .$(SHLIBEXT), $(modules)) $(LIBDIR)/pdb
 
 distclean:
