added -fPIC option to modules (hopefully fixes build on amd64)
git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@23 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/source/Makefile.in
+++ b/samba-pdbsql/source/Makefile.in
@@ -16,7 +16,7 @@ CFLAGS = @CFLAGS@ -I$(SOURCEDIR) -I$(SOURCEDIR)/include -I$(SOURCEDIR)/ubiqx -I$
 all: $(addsuffix .$(SHLIBEXT), $(modules))
 
 .c.o:
-	$(CC) $(CFLAGS) -c $< 
+	$(CC) $(CFLAGS) -fPIC -c $< 
 
 mysql.$(SHLIBEXT): pdb_mysql.o pdb_sql.o
 	$(CC) -shared -o $@ $^ $(MYSQL_LIBS)
