Move sources to top-level directory. Add AUTHORS file Update README
git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@30 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/Makefile.in
+++ b/samba-pdbsql/Makefile.in
@@ -34,7 +34,7 @@ install:
 	$(INSTALL) -d $(LIBDIR)/pdb
 	$(INSTALL) -m 0755 $(addsuffix .$(SHLIBEXT), $(modules)) $(LIBDIR)/pdb
 
-distclean:
+distclean: clean
 	rm -rf autom4te.cache config.cache config.status
 	rm -f config.h Makefile config.log
 	rm -f *~
