Support the $(DESTDIR) convention
git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@32 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/Makefile.in
+++ b/samba-pdbsql/Makefile.in
@@ -31,8 +31,8 @@ clean:
 	rm -f *.o *.$(SHLIBEXT)
 
 install:
-	$(INSTALL) -d $(LIBDIR)/pdb
-	$(INSTALL) -m 0755 $(addsuffix .$(SHLIBEXT), $(modules)) $(LIBDIR)/pdb
+	$(INSTALL) -d $(DESTDIR)$(LIBDIR)/pdb
+	$(INSTALL) -m 0755 $(addsuffix .$(SHLIBEXT), $(modules)) $(DESTDIR)$(LIBDIR)/pdb
 
 distclean: clean
 	rm -rf autom4te.cache config.cache config.status
