--- a/samba-pdbsql/debian/rules
+++ b/samba-pdbsql/debian/rules
@@ -24,9 +24,11 @@ binary-arch: build
 	dh_installdirs
 	$(MAKE) install DESTDIR=`pwd`/debian/tmp LIBDIR=/usr/lib/samba
 	dh_install --sourcedir=`pwd`/debian/tmp
-	dh_installdocs -a docs/README docs/pdb_mysql.xml
+	dh_installdocs -p samba-pdb-pgsql AUTHORS docs/README
+	dh_installdocs -p samba-pdb-mysql docs/pdb_mysql.html AUTHORS docs/README
 	dh_installchangelogs -a 
-	dh_installexamples -a docs/smb.conf.mysql docs/mysql.dump docs/smb.conf.pgsql docs/pgsql.dump
+	dh_installexamples -p samba-pdb-mysql docs/smb.conf.mysql docs/mysql.dump 
+	dh_installexamples -p samba-pdb-pgsql docs/smb.conf.pgsql docs/pgsql.dump
 	dh_installman -a
 	dh_compress -a
 	dh_fixperms -a
