Add start of a backend to support multiple backends (-:
git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@46 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/Makefile.in
+++ b/samba-pdbsql/Makefile.in
@@ -24,6 +24,9 @@ mysql.$(SHLIBEXT): pdb_mysql.o pdb_sql.o
 pgsql.$(SHLIBEXT): pdb_pgsql.o pdb_sql.o
 	$(CC) -shared -o $@ $^ $(PGSQL_LIBS)
 
+multi.$(SHLIBEXT): pdb_multi.o
+	$(CC) -shared -o $@ $^
+
 Makefile: Makefile.in config.status
 	./config.status
 
