Add multi.so by default.
git-svn-id: https://svn.code.sf.net/p/pdbsql/code/trunk@54 b954584a-150e-0410-b99c-f0157ab827df

--- a/samba-pdbsql/Makefile.in
+++ b/samba-pdbsql/Makefile.in
@@ -3,9 +3,9 @@
 CC = @CC@
 INSTALL = @INSTALL@
 
-modules = @modules@
-
 SHLIBEXT = @SHLIBEXT@
+
+modules = multi.$(SHLIBEXT) @modules@
 
 MYSQL_LIBS = @MYSQL_LIBS@
 PGSQL_LIBS = @PGSQL_LIBS@
