--- a/samba-pdbsql/debian/rules
+++ b/samba-pdbsql/debian/rules
@@ -26,6 +26,7 @@ binary-arch: build
 	dh_install --sourcedir=`pwd`/debian/tmp
 	dh_installdocs -p samba-pdb-pgsql AUTHORS docs/README
 	dh_installdocs -p samba-pdb-mysql docs/pdb_mysql.html AUTHORS docs/README
+	dh_installdocs -p samba-pdb-multi AUTHORS docs/README
 	dh_installchangelogs -a 
 	dh_installexamples -p samba-pdb-mysql docs/smb.conf.mysql docs/mysql.dump 
 	dh_installexamples -p samba-pdb-pgsql docs/smb.conf.pgsql docs/pgsql.dump
