--- a/configure.in
+++ b/configure.in
@@ -4,6 +4,10 @@ AC_CONFIG_SRCDIR([pdb_mysql.c])
 AC_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
+# Only add -Wall if we're using GCC
+if test "x$GCC" = "xyes"; then
+ CFLAGS="-Wall $CFLAGS"
+fi
 AC_SUBST(CFLAGS)
 
 SHLIBEXT="so"
